deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-monitor
  labels:
    app.kubernetes.io/part-of: open-monitor
