deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-monitor
  namespace: open-monitor
  annotations:
    # TODO: pick the right annotations for your ingress controller (ALB / nginx / istio)
    # AWS Load Balancer Controller example:
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:...
    kubernetes.io/ingress.class: alb
spec:
  rules:
    # TODO: replace example hosts
    - host: status.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: status-page, port: { number: 80 } }
    - host: status-admin.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: web, port: { number: 80 } }
    - host: status-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: api, port: { number: 80 } }
